# TrajecSimuGUI

./: .gitignore  .stylelintrc  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE-APACHE  LICENSE-MIT.txt  PROJECT_SETUP_COMPLETE.md  README.md  about.toml  callgrind.out.299570  deployment.md  download_seamless_photo.js  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.js
.github/workflows/: audit.yml  build.yml
.run/: Run simulator_cli.run.xml  Test TrajecSimuGUI.run.xml
crates/simulator_cli/: Cargo.toml
crates/simulator_cli/examples/minimal/: config.yaml
crates/simulator_cli/examples/minimal/tables/: cd_alpha_mach.csv  cn_mach.csv  cp_mach.csv  cs_mach.csv  thrust.csv  vterm.csv
crates/simulator_cli/examples/noshiri_2025/: config.yaml
crates/simulator_cli/examples/noshiri_2025/out_fixed/: events.json  summary.json
crates/simulator_cli/examples/noshiri_2025/out_fixed_schema_only/: summary.json
crates/simulator_cli/examples/noshiri_2025/out_mass_schema/: events.json
crates/simulator_cli/examples/noshiri_2025/tables/: cd_alpha_mach.csv  cn_mach.csv  cp_mach.csv  cs_mach.csv  thrust.csv  vterm.csv  wind_table.csv
crates/simulator_cli/src/: assemble.rs  chart.rs  config.rs  convert_legacy.rs  csv_loader.rs  dem.rs  kml_writer.rs  landing_area.rs  lib.rs  main.rs  pipeline.rs  refine_landing.rs  runner.rs  simulate.rs  summary_writer.rs
crates/simulator_core/: Cargo.toml  askama.toml  build.rs
crates/simulator_core/cpp/: jsbsim_bridge.cpp  jsbsim_bridge.h
crates/simulator_core/src/: analysis.rs  arc_serde.rs  error.rs  jsbsim.rs  lib.rs  orchestrator.rs  output.rs  params.rs  progress.rs  simple_simulator.rs  standard_atmosphere.rs  terrain.rs  workspace.rs  xml_gen.rs
crates/simulator_core/src/jsbsim/: ffi.rs  state.rs
crates/simulator_core/src/params/: aero.rs  body_mass.rs  engine.rs  launch_env.rs  parachute.rs  sim_control.rs
crates/simulator_core/src/simple_simulator/: env.rs  jsbsim_stage.rs  launch_rail.rs  parachute.rs
crates/simulator_core/src/simple_simulator/snapshots/: simulator_core__simple_simulator__parachute__tests__transition_from_high_speed_to_steady_state_is_smooth.snap
crates/simulator_core/src/xml_gen/: context.rs
crates/simulator_core/tests/: jsbsim_smoke.rs
crates/tile_cache/: Cargo.toml
crates/tile_cache/src/: aerial.rs  dem.rs  dem_tile.rs  lib.rs
input_reference/: 21stNSE保安域案_海射場.kmz  landed_area.yaml
input_reference/tables/: cd0.csv  cdmach.csv  cnmach.csv  cp_mach.csv  csmach.csv  thrust.csv
param-xml-template/: pq_simulation.xml.j2  unitconversions.xml
param-xml-template/aircraft/PQ_ROCKET/: liftoff.xml.j2  pq_rocket.xml.j2
src/: app.css
src-tauri/: .env.example  .gitignore  Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: google_sheets.rs  lib.rs  main.rs
src/lib/components/: Button.svelte  ChannelPanel.svelte  Chart.svelte  ChartMap.svelte  DataPanel.svelte  DualChart.svelte  FileControl.svelte  FilePathInput.svelte  GoogleSheetInput.svelte  Input.svelte  KmlFileInput.svelte  LoadingOverlay.svelte  Map.svelte  NumberInput.svelte  ParamsPanel.svelte  RunPanel.svelte  Select.svelte  SideControl.svelte  SummaryMap.svelte  TableEditor.svelte  TablesPanel.svelte
src/lib/components/groups/: AeroGroup.svelte  BodyGroup.svelte  EngineGroup.svelte  LaunchGroup.svelte  ParachuteGroup.svelte  SimGroup.svelte
src/lib/components/icons/: Rocket.svelte  Start.svelte  Stop.svelte
src/lib/types/: config.ts
src/lib/utils/: configMerge.ts  csvTable.ts  path.ts  tileBaseUrl.ts  updater.ts  yamlConfig.ts
src/routes/: +page.svelte
