[workspace]
members = [
    "crates/simulator_core",
    "crates/simulator_cli",
    "crates/tile_cache",
    "src-tauri",
]
exclude = ["jsbsim", "src", "public", "static"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/misohiyoko/TrajecSimuGUI"

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"
codegen-units = 1

[profile.dev]
opt-level = 0


[profile.profiling]
inherits = "release"
debug = true
