[package]
name = "simulator_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI interface for rocket simulator"

[dependencies]
simulator_core = { path = "../simulator_core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.11"
csv = "1.3"

[[bin]]
name = "simulator_cli"
path = "src/main.rs"
