[package]
name = "simulator_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI interface for rocket simulator"

[dependencies]
simulator_core = { path = "../simulator_core" }
tile_cache     = { path = "../tile_cache" }
clap           = { version = "4.5", features = ["derive"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
csv            = "1"
serde_yaml     = "0.9"
anyhow         = "1.0"
log            = "0.4"
env_logger     = "0.11"
rayon          = "1.10"
plotters       = "0.3.3"

[[bin]]
name = "simulator_cli"
path = "src/main.rs"
