[package]
name = "simulator_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core simulator engine: JSBSim C++ binding, XML generation, custom simulator"

[dependencies]
cxx       = "1"
minijinja = "2"
tempfile  = "3"
uuid      = { version = "1", features = ["v4"] }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

uom = { version = "0.36", features = ["f64"] }

thiserror  = "2"



[build-dependencies]
cxx-build = "1"
cmake     = "0.1"

[dev-dependencies]
insta = "1.47.2"

